[project]
name = "stock-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.4.4",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "seaborn>=0.13.2",
    "yfinance>=1.2.0",
]
